<resources>
    <string name="app_name">iFuturus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_report">Lodge Complaint Report</string>
    <string name="menu_update_report">My Submitted Report</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aboutus">About Us</string>

    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="cancel">Cancel</string>
    <string name="password_format_error_message">Password must be more than 6 characters</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="invalid_phone_format">Invalid Phone Number Format +60XXXXXXXXX</string>
    <string name="could_not_upload_image">Could Not Update Image</string>
    <string name="no_image_selected">No image selected</string>
    <string name="updating_profile_picture">Updating profile picture</string>
    <string name="uploading">Uploading</string>
    <string name="uploadSuccessful">Successfully Uploaded</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="image_clicked">Kindly choose a photo to change profile picture</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_sign_up">Google Sign Up</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="required">Required</string>
    <string name="password_not_match">Password does not match</string>
    <string name="invalid_email_format">Invalid Email Address Format</string>
    <string name="account_create_successful">Account has successfully been created</string>
    <string name="account_create_successful_please_verify">Account has successfully been created, Please Verify your Email to proceed!</string>
    <string name="login_successful">Login Successfully!</string>
    <string name="email_already_registered">This email has already been registered with iFuturus!</string>
    <string name="account_cannot_create">Account cannot be created!</string>
    <string name="login">Login</string>
    <string name="quit">quit</string>
    <string name="quit_dialog">Quit</string>
    <string name="confirm_quit_dialog">Confirm Quit</string>
    <string name="logout">Logout</string>
    <string name="invalid_login_credentials">Invalid Login Credentials!</string>
    <string name="logout_successful">Successfully Logout!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="menu_report_status">View All Report</string>
    <string name="aboutusdetails">
        This mobile application is built to allow the user
        to easily lodge and tracked a complaint report with
        the focus on a great User Interface and User Experience.
    </string>
    <string name="privacy_policy_text">
        Information We Collect\nWe
        collect information about you to provide our services.
        In order for us to best provide our services to you (and to help make
        it feasible for us to do so), it is essential that we are able to collect
        and use the information as described in this Policy.</string>
    <string name="faq_details">
        What personal data is shared is determined by the Privacy
        and Cookie Policies of the Sites you use.\nThe
        personal data shared depends on your interaction with the Sites
        in the course of your lodge report and application activities.
        It may include your name, user name, email address,
        and session activity on the Sites.
    </string>
    <string name="resend_email_verification">Resend Email Verification</string>
    <string name="welcome_to_ifuturus">Welcome To iFuturus</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="track_report_status">Track Report Status</string>

</resources>
