<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/username"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        app:helperText="@string/your_email_address"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2_Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/errorForPassword"
        app:helperText="@string/password_format_error_message"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Username"
        app:passwordToggleDrawable="@drawable/toggle_password_visibility"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--must run on material design alpha build 1.1.0-alpha06-->
    <!--app:icon="@drawable/ic_arrow_forward_black_24dp"-->
    <!--app:iconGravity="textEnd"-->
    <!--app:iconPadding="10dp"-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@color/colorPrimary"
        android:paddingStart="100dp"
        android:paddingTop="15dp"
        android:paddingEnd="100dp"
        android:paddingBottom="15dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintStart_toEndOf="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2_Password"
        app:rippleColor="@color/colorSignInRipple" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:rippleColor="@color/colorSignInRipple" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#47525E"
        android:padding="15dp"
        android:text="@string/quit"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_sign_up"
        app:rippleColor="@color/colorCancelRipple" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintStart_toEndOf="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/button_cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_email_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#455a64"
        android:text="@string/resend_email_verification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_login_terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text=" I have read and agree to the Terms \n and Conditions and Privacy Policy \n of iFuturus."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>